# deno-mmap

./: .gitignore  .prettierignore  README.md  deno.json  jsr.json  mod.ts
.github/workflows/: release.yml
ffi/: Cargo.toml
ffi/.cargo/: config.toml
ffi/src/: lib.rs
scripts/: build-release.ps1  gen_checksums_json.ts
src/: ffi_api.ts  loader.ts  platform.ts
tests/: test_cycle.ts
