[package]
name = "deno_mmap_ffi"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Thin ABI mmap/MapViewOfFile wrapper for Deno FFI"
authors = ["Andrei Riaskov <code@riaskov.com>"]

[lib]
crate-type = ["cdylib"]

[features]
windows = []

[dependencies]
cfg-if = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_Security",
] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
opt-level = "z"